--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,7 +4,8 @@
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="xyz.cybersapien.amdb.MainActivityFragment"
+    android:layout_marginTop="?actionBarSize"
+    tools:context="xyz.cybersapien.amdb.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <LinearLayout
