--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -5,8 +5,9 @@
     android:id="@+id/list_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp"
-    android:padding="15dp">
+    android:layout_margin="@dimen/cardview_padding"
+    app:cardCornerRadius="1dp"
+    app:cardElevation="10dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
