--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -111,6 +111,7 @@
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:text="@string/reviews"
+            android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/detail_movie_release" />
@@ -130,6 +131,7 @@
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:text="@string/trailers"
+            android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/reviews_list_view" />
