--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">5dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="cardview_padding">5dp</dimen>
+    <dimen name="app_bar_height">200dp</dimen>
 </resources>
