--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -18,6 +18,7 @@
             android:id="@+id/list_item_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:contentDescription="@string/movie_poster"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
